add expiration to the access token, using configurable prop.

--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -1,7 +1,10 @@
-# MARS_DB_HOST=172.21.53.144
 MARS_DB_HOST=127.0.0.1
 MARS_DB_USER=root
 MARS_DB_PASSWORD=ohadrwho
+
+
+
+com.ohadr.restful-login.access-token-expiration-minutes=90
 
 
 # Crypto settings
