add keystore... (instead auto-creation on the fly)

--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -8,7 +8,7 @@ com.ohadr.restful-login.access-token-expiration-minutes=90
 
 
 # Crypto settings
-com.ohadr.crypto.keystore=C:/Ohad/Dev/Tools/ohad.ks
+com.ohadr.crypto.keystore=C:/Ohad/Dev/Projects/rest_login/ohad.ks
 com.ohadr.crypto.password=kspass
 com.ohadr.crypto.keyAlias=ohadr
-com.ohadr.crypto.createKeystoreFileIfNotExist=false
+com.ohadr.crypto.createKeystoreFileIfNotExist=true
