--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>com.ohadr</groupId>
 			<artifactId>common-crypto</artifactId>
-			<version>2.1-RELEASE</version>
+			<version>2.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
